DASH-3856 [Company Settings] Hide number of unverified domains if there are none

--- a/src/company/appsco-company-domains.html
+++ b/src/company/appsco-company-domains.html
@@ -122,7 +122,9 @@ Custom property | Description | Default
                 <div class="info-total">
                     <div class="total">
                         Total verified domains: [[ _verifiedDomains ]]
-                        <span class="total emphasized">([[ _unverifiedDomains ]] unverified)</span>
+                        <template is="dom-if" if="[[ _unverifiedDomains ]]">
+                            <span class="total emphasized">([[ _unverifiedDomains ]] unverified)</span>
+                        </template>
                     </div>
                 </div>
 
