--- a/src/billing/appsco-update-subscription-action.html
+++ b/src/billing/appsco-update-subscription-action.html
@@ -104,6 +104,15 @@
                 on-response="_handlePlansResponse"
         ></iron-ajax>
 
+        <iron-ajax id="getPublicKeyCall"
+                   auto
+                   url="[[ _publicKeyApi ]]"
+                   method="GET"
+                   headers="[[ _headers ]]"
+                   handle-as="json"
+                   on-response="_handlePublicKeyResponse">
+        </iron-ajax>
+
         <paper-dialog id="dialog"
                       with-backdrop
                       entry-animation="scale-up-animation"
@@ -272,7 +281,37 @@
                 _selectedPlan: {
                     type: String,
                     computed: "_computeSelectedPlan(subscription, _plans)"
+                },
+
+                _stripePublicKey: {
+                    type: String,
+                    value: ''
+                },
+
+                /**
+                 * Computed headers.
+                 * It contains authorization token.
+                 */
+                _headers: {
+                    type: Object,
+                    computed: '_computeHeaders(authorizationToken)'
+                },
+
+                _publicKeyApi: {
+                    type: String,
+                    computed: '_computePublicKeyApi(companyApi)'
                 }
+            },
+
+            _computePublicKeyApi: function(companyApi) {
+                return companyApi + '/billing/pk';
+            },
+
+            _handlePublicKeyResponse: function(event) {
+                if (!event.detail.response) {
+                    return;
+                }
+                this._stripePublicKey = event.detail.response.stripePublicKey;
             },
 
             _computeHeaders: function (authorizationToken) {
@@ -411,26 +450,58 @@
                 options.body = body;
 
                 request.send(options).then(
-                        function(request) {
-                            this.$.dialog.close();
+                    function(request) {
+                        if (request.response.requires_action) {
+                            var stripe = Stripe(this._stripePublicKey);
+                            var elements = stripe.elements();
 
-                            /**
-                             * Fired when subscription has been updated.
-                             *
-                             * @event subscription-updated
-                             */
-                            this.fire('subscription-updated', {
-                                subscription: request.response
-                            });
+                            stripe.handleCardPayment(request.response.client_secret).then(function(result) {
+                                if (result.error) {
+                                    this._error = 'An error occured';
+                                    this._purchaseLoader = false;
+                                } else {
+                                    this._paymentCompleted(request.response);
+                                }
+                            }.bind(this));
+                            return;
+                        }
 
-                            this._purchaseLoader = false;
-                        }.bind(this),
-                        function() {
-                            this._error = request.response.message;
-                            this._purchaseLoader = false;
-                        }.bind(this)
+                        this._paymentCompleted(request.response);
+                    }.bind(this),
+                    function() {
+                        this._error = request.response.message;
+                        this._purchaseLoader = false;
+                    }.bind(this)
                 );
+            },
+
+            _paymentCompleted: function(response) {
+                var request = document.createElement('iron-request'),
+                    options = {
+                        url: response.on_confirm,
+                        method: 'POST',
+                        handleAs: 'json',
+                        headers: {
+                            'Authorization': 'token ' + this.authorizationToken,
+                            'Content-Type': 'application/x-www-form-urlencoded'
+                        }
+                    };
+                request.send(options).then(function() {
+                    this.$.dialog.close();
+
+                    /**
+                     * Fired when application has been shared.
+                     *
+                     * @event application-shared
+                     */
+                    this.fire('subscription-updated', {
+                        subscription: response
+                    });
+
+                    this._purchaseLoader = false;
+                }.bind(this));
             }
+
         });
     </script>
 </dom-module>
